--- a/1.md
+++ b/1.md
@@ -161,10 +161,12 @@ a=charset属性指定协议使用的字符集。一般的是ISO-10646。
 
 
 相关资料：
-https://blog.csdn.net/wangzhe03091252/article/details/78044587（mrcpv2）
-https://blog.csdn.net/jobbofhe/article/details/78477407(sip)
-https://www.cnblogs.com/qingquan/archive/2011/07/14/2106834.html(rtsp)
-https://www.cnblogs.com/idignew/p/7249056.html(sdp)
+https://blog.csdn.net/wangzhe03091252/article/details/78044587 （mrcpv2）
+https://blog.csdn.net/jobbofhe/article/details/78477407 (sip)
+https://www.cnblogs.com/qingquan/archive/2011/07/14/2106834.html (rtsp)
+https://www.cnblogs.com/idignew/p/7249056.html (sdp)
+
+ps:部分资料来自网络侵删。
 
 
 
