--- a/1.md
+++ b/1.md
@@ -1,18 +1,13 @@
 
 # 一.unimrcp架构。
 
+![](104fc461-75c2-4f24-8b42-db52137ab806.jpg)
+
 简单来说就是sip建立连接，sdp定义会话描述的统一格式，mrcp依赖xml进行控制消息，rtp流发送语音。
 
+![](mrcp2.png)
 
-
-
-
-
-
-
-
-
-
+![](mrcp3.png)
 
 # 二.mrcp概要
 
