--- a/2.md
+++ b/2.md
@@ -1,7 +1,42 @@
-# mrcp源码阅读
+# unimrcp源码阅读
+
+目录结构
+
+|-- source code
+	|-- build/			编译工具
+	|-- conf/			配置目录
+		|-- unimrcpserver.xml		服务端配置，包括服务ip/端口/asr、tts引擎参数等等
+		|-- unimrcpclient.xml		umc配置，包括客户端ip/端口等等
+		|-- client-profiles/		umc测试服务配置，每个文件代表一种服务
+			|-- unimrcp.xml				默认配置，包括服务ip/端口等等
+		|-- umc-scenarios/			umc行为配置
+	|-- data/			测试数据
+	|-- libs/			基础类库，包括apache runtime/mrcp、sip、rtp协议文本解析等等
+	|-- modules/		同上
+	|-- platforms/		应用
+	|-- plugins/		server端资源插件，支持语音识别/语音合成/录音器/语音认证
+	|-- tools/			工具
+
+|-- install dir
+	|-- apr/			apache runtime依赖
+	|-- bin/			应用程序
+	|-- conf/			配置目录，从源代码同名目录复制
+	|-- data/			测试数据，从源代码同名目录复制
+	|-- lib/			应用依赖动态链接库
+	|-- log/			日志目录
+	|-- plugin/			插件动态链接库
+	|-- sipp-3.5.2/		压力测试工具
+	|-- sofia/			协议文本解析依赖
 
 首先我们找到main函数
 
 ![](mrcp-2.png)
+
+一.启动server加载配置。
+
+![](mrcp-3.png)
+
+
+
 
 
