--- a/2.md
+++ b/2.md
@@ -25,6 +25,9 @@
 一.启动server加载配置。
 
 ![](mrcp-3.png)
+```
+static apt_bool_t options_load(server_options_t *options, int argc, const char * const *argv, apr_pool_t *pool)
+```
 
 
 
