--- a/2.md
+++ b/2.md
@@ -22,12 +22,39 @@
 
 ![](mrcp-2.png)
 
-一.启动server加载配置。
+## 一.启动server加载配置。
 
 ![](mrcp-3.png)
 ```
 static apt_bool_t options_load(server_options_t *options, int argc, const char * const *argv, apr_pool_t *pool)
 ```
+通过root下的几个主要字节点分别进行处理，对应处理函数如下：
+
+unimrcp_server_properties_load ： properties加载
+
+unimrcp_server_components_load ：componets加载，包括各个功能的plugin
+
+unimrcp_server_settings_load ： 
+
+unimrcp_server_profiles_load ：
+
+unimrcp_server_misc_load ：
+
+## 二.消息处理链路
+
+系统启动时会为每个plugin启动一个任务处理线程，循环函数在：
+```
+apt_consumer_task.c：apt_consumer_task_run()
+```
+具体消息处理在 ：
+```
+apt_task.c : apt_task_msg_process()  ——》apt_task_vtable_t.process_msg() ——》会调用到每个plugin定时时注册的函数
+```
+MRCP消息解析 ： 
+```
+apt_text_message.c:apt_message_parser_run()
+```
+
 
 
 
