--- a/2.md
+++ b/2.md
@@ -54,6 +54,10 @@ MRCP消息解析 ：
 ```
 apt_text_message.c:apt_message_parser_run()
 ```
+ASR与TTS实现 
+
+UNIMRCP是MRCP协议的封装，并没有实现ASR或TTS的能力。基于UNIMRCP提供ASR或TTS服务，用户需要自己实现能提供真实ASR和TTS能力的plugin。UNIMRCP提供了ASR和TTS的plugin的demo示例，基于demo开发更加方便快捷。
+
 
 
 
