--- a/2.md
+++ b/2.md
@@ -1,6 +1,6 @@
 # unimrcp源码阅读
 
-目录结构
+整个项目的目录结构
 ```
 |-- source code
 	|-- build/			编译工具
@@ -23,6 +23,9 @@
 ![](mrcp-2.png)
 
 ## 一.启动server加载配置。
+![](unimrcp.png)
+
+首先就是做初始化，创建内存池，加载配置
 
 ![](mrcp-3.png)
 ```
@@ -56,9 +59,9 @@ apt_text_message.c:apt_message_parser_run()
 ```
 ASR与TTS实现 
 
-UNIMRCP是MRCP协议的封装，并没有实现ASR或TTS的能力。基于UNIMRCP提供ASR或TTS服务，用户需要自己实现能提供真实ASR和TTS能力的plugin。UNIMRCP提供了ASR和TTS的plugin的demo示例，基于demo开发更加方便快捷。
+UNIMRCP是MRCP协议的封装，并没有实现ASR或TTS的能力。基于UNIMRCP提供ASR或TTS服务，用户需要自己实现能提供真实ASR和TTS能力的plugin。UNIMRCP提供了ASR和TTS的plugin的demo示例，基于demo开发更加方便快捷。(据我所知目前大家用的都是科大讯飞的)
 
-s
+
 
 
 
