--- a/2.md
+++ b/2.md
@@ -51,7 +51,7 @@ apt_consumer_task.c：apt_consumer_task_run()
 ```
 具体消息处理在 ：
 ```
-apt_task.c : apt_task_msg_process()  ——》apt_task_vtable_t.process_msg() ——》会调用到每个plugin定时时注册的函数
+apt_task.c : apt_task_msg_process()  ——》apt_task_vtable_t.process_msg() ——》会调用到每个plugin定时注册的函数
 ```
 MRCP消息解析 ： 
 ```
