--- a/2.md
+++ b/2.md
@@ -1,5 +1,7 @@
 # unimrcp源码阅读
 
+编译就不说了这个官方文档还是能看明白的
+
 整个项目的目录结构
 ```
 |-- source code
@@ -25,7 +27,7 @@
 ## 一.启动server加载配置。
 ![](unimrcp.png)
 
-首先就是做初始化，创建内存池，加载配置
+首先就是做初始化，创建内存池，加载配置,接下来就是从各种配置文件加载各种东西（目录布局，日志等等）,可以在命令行中制定日志的优先级以及内容的覆盖。
 
 ![](mrcp-3.png)
 ```
@@ -60,6 +62,8 @@ apt_text_message.c:apt_message_parser_run()
 ASR与TTS实现 
 
 UNIMRCP是MRCP协议的封装，并没有实现ASR或TTS的能力。基于UNIMRCP提供ASR或TTS服务，用户需要自己实现能提供真实ASR和TTS能力的plugin。UNIMRCP提供了ASR和TTS的plugin的demo示例，基于demo开发更加方便快捷。(据我所知目前大家用的都是科大讯飞的)
+
+
 
 
 
