--- a/2.md
+++ b/2.md
@@ -48,6 +48,9 @@ unimrcp_server_misc_load ：
 ## 二.消息处理链路
 
 系统启动时会为每个plugin启动一个任务处理线程，循环函数在：
+
+![](unimrcp1.png)
+
 ```
 apt_consumer_task.c：apt_consumer_task_run()
 ```
