--- a/2.md
+++ b/2.md
@@ -55,10 +55,16 @@ unimrcp_server_misc_load ：
 apt_consumer_task.c：apt_consumer_task_run()
 ```
 具体消息处理在 ：
+
+![](unimrcp2.png)
+
 ```
 apt_task.c : apt_task_msg_process()  ——》apt_task_vtable_t.process_msg() ——》会调用到每个plugin定时注册的函数
 ```
-MRCP消息解析 ： 
+MRCP消息解析 ：
+
+![](unimrcp3.png)
+
 ```
 apt_text_message.c:apt_message_parser_run()
 ```
