--- a/3.md
+++ b/3.md
@@ -1,1 +1,7 @@
 # 背景介绍
+
+1.什么是mrcp?
+
+mrcp即，媒体资源控制协议（Media Resource Control Protocol, MRCP）是一种通讯协议，用于语音服务器向客户端提供各种语音服务（如：语音识别，语音合成，声纹识别，录音服务等）。MRCP并不定义会话连接，不关心服务器与客户端是如何连接的，MRCP的消息通常是承载于其它协议之上，如：RTSP，SIP等。
+MRCP消息使用类似于 HTTP 等许多Internet协议类似的明文信令文本格式，每个消息包括三部分：首行，消息头，消息体。首行表明消息类型及返回码等信息。消息头包括了若干行内容，每一行都形如 "字段名:数值"。消息体包括了消息的详细内容，长度在消息头中指定。
+类似于 HTTP，MRCP使用请求（通常由客户端发起）、响应模式。响应可以简单的确认请求，或者给出关于处理的其它信息。例如，MRCP客户端向服务端请求想要发送一些音频数据以进行处理（比如说语音识别），为此，服务端可以发送一个包含端口号的响应，因为MRCP并未定义音频数据的传输，所以，必须依靠其它的协议，比如说 RTP 来进行。
