--- a/2.md
+++ b/2.md
@@ -72,7 +72,11 @@ apt_text_message.c:apt_message_parser_run()
 ```
 ## ASR与TTS实现 
 
-UNIMRCP是MRCP协议的封装，并没有实现ASR或TTS。基于UNIMRCP提供ASR或TTS服务，用户需要自己实现能提供真实ASR和TTS能力的plugin。UNIMRCP提供了ASR和TTS的plugin的demo示例，我们可以基于demo实现自己的plugin。(据我所知目前大家用的都是科大讯飞的)
+UNIMRCP是MRCP协议的封装，并没有实现ASR或TTS。基于UNIMRCP提供ASR或TTS服务，用户需要自己实现能提供真实ASR和TTS能力的plugin。UNIMRCP提供了ASR和TTS的plugin的demo示例，我们可以基于demo实现自己的plugin。(据我所知目前大家用的都是科大讯飞的或者阿里的)
+
+官方的实现手册
+
+http://www.unimrcp.org/manuals/html/PluginImplementationManual.html
 
 
 
