--- a/4.md
+++ b/4.md
@@ -49,5 +49,7 @@ mrcp_engine_channel_message_send(synth_channel->channel,message);
 ```
 5.所以基于demo开发tts要注意在1.取出文本，交给tts,以及将语音按顺序填充到buffer，发出去。由于合成需要时间所以可以先填充空白音。其次在合成语音转rtp发出去这里也可以不按照demo中的这种方式去写，无论怎么实现保证录音顺序就好。
 
+ps:多看官方手册（上篇末尾）
+
 
 
