--- a/4.md
+++ b/4.md
@@ -53,7 +53,7 @@ mrcp_engine_channel_message_send(synth_channel->channel,message);
 ```
 5.所以基于demo开发tts要注意在1.取出文本，交给tts,以及将语音按顺序填充到buffer，发出去。由于合成需要时间所以可以先填充空白音。其次在合成语音转rtp发出去这里也可以不按照demo中的这种方式去写，无论怎么实现保证录音顺序就好。
 
-ps:多看官方手册（上篇末尾）。本篇并没有具体的调用某个服务提供商的tts和asr服务，大家可以去尝试对接阿里，讯飞，中科院等等提供的相应服务。
+ps:多看官方手册（上篇末尾）。本篇并没有具体的调用某个服务提供商的tts和asr服务，大家可以去尝试对接阿里，讯飞，中科院等等提供的相应服务。本系列基本完成了，如果还要写的话可能会写基于某个服务提供商实现完整demo的过程。
 
 
 
